[gd_scene load_steps=16 format=3 uid="uid://cuw7r31kr73x"]

[ext_resource type="PackedScene" uid="uid://bx0l5b5fqhk0l" path="res://Munchme/munchme.tscn" id="1_i02uy"]
[ext_resource type="Script" path="res://Munchme/Solidude/Solidude.gd" id="2_qf85q"]
[ext_resource type="Script" path="res://Munchme/munchme_resource.gd" id="3_ek83g"]
[ext_resource type="PackedScene" uid="uid://dxvcr50hyn1yv" path="res://Munchme/Solidude/solidude_model.tscn" id="4_h5uhp"]
[ext_resource type="PackedScene" uid="uid://bjn2rcatd3p5i" path="res://Munchme/Solidude/solidude_minigame.tscn" id="4_q1idu"]
[ext_resource type="PackedScene" uid="uid://c4ys6xwwbmvsm" path="res://Sprites/solidude/SolidudeDies.tscn" id="5_fe33d"]
[ext_resource type="AudioStream" uid="uid://bhpemdup1hr05" path="res://SFX/Minigames/punch_hit.ogg" id="7_tgp74"]

[sub_resource type="Resource" id="Resource_3mgou"]
script = ExtResource("3_ek83g")
id = 0
name = "Solidude"
munchme_type = 1
max_health = 100
mood = 1
catch_track = 3
roam_track = 7
catch_looker_size = Vector2(910, 647)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_opjby"]
radius = 0.46621
height = 1.41735

[sub_resource type="Animation" id="Animation_wdmum"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PunchParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SolidudeDies:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Model:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gtxsf"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SolidudeDies:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SolidudeDies")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"die", 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Model:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PunchParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_030mv"]
resource_name = "punched"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PunchParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_26ssr"]
_data = {
"RESET": SubResource("Animation_wdmum"),
"death": SubResource("Animation_gtxsf"),
"punched": SubResource("Animation_030mv")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5e7dh"]
lifetime_randomness = 0.2
emission_shape = 1
emission_sphere_radius = 0.2
spread = 180.0
initial_velocity_min = 0.1
initial_velocity_max = 2.0
scale_min = 0.1
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_ig382"]
size = 0.1
section_length = 0.01

[node name="Solidude" instance=ExtResource("1_i02uy")]
script = ExtResource("2_qf85q")
resource = SubResource("Resource_3mgou")
height = 1.0
step_sounds_default = false
step_sounds_type = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000909328, 0.721725, 0.0435762)
shape = SubResource("CapsuleShape3D_opjby")

[node name="Model" parent="." index="3" instance=ExtResource("4_h5uhp")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0.567159, 0)

[node name="SolidudeDies" parent="." index="4" instance=ExtResource("5_fe33d")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0.598625, 0)
visible = false

[node name="OverworldMovement" parent="." index="5"]
walking_speed = 1.0
sneak_speed = 1.0
air_speed = 3.0
max_fall_speed = 100.0
can_jump = true
jump_velocity = 25.0

[node name="Animation" type="AnimationPlayer" parent="." index="7"]
libraries = {
"": SubResource("AnimationLibrary_26ssr")
}

[node name="SolidudeMinigame" parent="." index="8" instance=ExtResource("4_q1idu")]
visible = false

[node name="PunchParticles" type="GPUParticles3D" parent="." index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.693873, -0.0947233)
emitting = false
amount = 500
lifetime = 2.0
visibility_aabb = AABB(-1.17638, -0.70012, -0.904462, 2.35276, 1.40024, 1.80892)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_5e7dh")
draw_pass_1 = SubResource("RibbonTrailMesh_ig382")

[node name="GPUParticlesCollisionBox3D" type="GPUParticlesCollisionBox3D" parent="." index="11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0596607, -0.560593, -0.120207)
size = Vector3(6.6236, 1.14893, 6.07568)

[node name="PunchedAudioPlayer" type="AudioStreamPlayer" parent="." index="12"]
bus = &"Effects"

[node name="PunchedHitAudioPlayer" type="AudioStreamPlayer" parent="." index="13"]
stream = ExtResource("7_tgp74")
volume_db = -12.0
bus = &"Effects"

[connection signal="punched" from="SolidudeMinigame" to="." method="_on_solidude_minigame_punched"]
